<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TituloApp"
        style="@style/MiEstilo.Grande.Negrita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nombreJuego"
        android:textSize="25sp"
    />

    <Button
        style="@style/MiEstiloBtn.Grande.Italic"
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar"
        android:onClick="lanzarJuego"/>

    <Button
        style="@style/MiEstiloBtn.Grande.Italic"
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar"
        android:onClick="lanzarPreferences"/>

    <Button
        android:id="@+id/btn3"
        style="@style/MiEstiloBtn.Grande.Italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/Acercade" />

    <Button
        style="@style/MiEstiloBtn.Grande.Italic"
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarPuntuaciones"
        android:text="@string/Puntuaciones" />


</LinearLayout>